--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "@prisma/client": "^5.21.0",
+    "express": "^4.21.1",
+    "prisma": "^5.21.0"
   }
 }
