--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.13",
     "@types/node": "^22.7.5",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
@@ -20,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^5.21.0",
     "express": "^4.21.1",
+    "express-async-errors": "^3.1.1",
     "prisma": "^5.21.0"
   }
 }
